[package]
default-run = "arcutils"
description = "An executable tool for building rust-based kernels and compiling, assembling and linking any extra dependencies"
edition = "2021"
license = "GPL-3.0-only"
name = "arcutils"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
